# nc-for-android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/werebug/androidnetcat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  do_nothing.cpp  make_ncat.sh  sockaddr_u.h.patch
app/src/main/java/com/werebug/androidnetcat/: AndroidNetcatHome.kt  NetcatService.kt  NetcatSession.kt  NetcatWorker.kt
app/src/main/res/layout/: activity_netcat_home.xml  activity_netcat_session.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
app/src/test/java/com/werebug/androidnetcat/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
